objects/LAT_APBrandClient__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccountInAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Foco</label>
        <referenceTo>LAT_AccountInAction__c</referenceTo>
        <relationshipLabel>Marcas Cliente</relationshipLabel>
        <relationshipName>Marcas_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ActionBrand__c</fullName>
        <label>Action Marca</label>
        <referenceTo>LAT_PromotionalActionKeyBrands__c</referenceTo>
        <relationshipLabel>Marcas Cliente</relationshipLabel>
        <relationshipName>Marcas_Cliente</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Comment__c</fullName>
        <label>Comentário</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Realizado</label>
        <type>Checkbox</type>
    </fields>
    <label>Marca Cliente</label>
    <nameField>
        <label>Marca Cliente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcas Cliente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>